# computer_graphics_project

./: .gitignore  Makefile  README.md  Starter.hpp  TextMaker.hpp  main.cpp
A00/: A00.cpp  Starter.hpp  VulkanProgram
A01/: A01.cpp  Makefile  VulkanProgram  triangles.hpp
A02/: A02.cpp  Starter.hpp  VulkanProgram  transforms.hpp
A03/: A03.cpp  Starter.hpp  TextMaker.hpp  VulkanProgram  transforms.hpp
A04/: A04.cpp  VulkanProgram  projection.hpp
A05/: A05.cpp  Starter.hpp  TextMaker.hpp  VulkanProgram  projection.hpp
A06/: A06.cpp  Starter.hpp  VulkanProgram  WorldView.hpp
A07/: A07.cpp  Logic.hpp  Starter.hpp  VulkanProgram
A08/: A08.cpp  VulkanProgram  mazeGen.hpp  mazeGen.hpp.old
A09/: A09.cpp  Starter.hpp  VulkanProgram
A09/shaders/: PhongFrag.spv  compile.sh
A10/: VulkanProgram
A10/shaders/: PhongFrag.spv  PhongShader.vert  compile.sh
A11/: VulkanProgram
A11/shaders/: BlinnFrag1.spv  BlinnFrag2.spv  BlinnFrag3.spv  BlinnShader1.frag  BlinnShader2.frag  BlinnShader3.frag  compile.sh
A12/: VulkanProgram
A12/shaders/: BlinnNormMapShader.frag  GGXNormMapFrag.spv  GGXNormMapShader.frag  OrenNayarFrag.spv  OrenNayarShader.frag  PhongFrag.spv  PhongShader.frag  compile.sh
A13/: VulkanProgram
A13/shaders/: BlinnFrag.spv  BlinnShader.frag  compile.sh
A14/: VulkanProgram  primGen.hpp
A15/: A15.cpp  Starter.hpp  TextMaker.hpp  primGen.hpp
A16/: A16.cpp  Starter.hpp
Assignments/: Makefile  README.md
Assignments/A01/: triangles.hpp
Assignments/A02/: Starter.hpp  transforms.hpp
Assignments/A03/: Starter.hpp  transforms.hpp
Assignments/A04/: projection.hpp
Assignments/A05/: projection.hpp
Assignments/A06/: WorldView.hpp
Assignments/A07/: Logic.hpp
Assignments/A08/: A08.cpp
Assignments/A10/shaders/: PhongShader.frag  PhongShader.vert  PhongVert.spv  clean_shaders.sh
Assignments/A11/shaders/: BlinnFrag2.spv  BlinnFrag3.spv  BlinnShader2.frag  BlinnShader3.frag  clean_shaders.sh
Assignments/A12/shaders/: BlinnNormMapFrag.spv  BlinnNormMapShader.frag  GGXNormMapShader.frag  OrenNayarShader.frag  PhongFrag.spv  PhongShader.frag  clean_shaders.sh
Assignments/A13/shaders/: BlinnFrag.spv  BlinnShader.frag  clean_shaders.sh  compile.sh
Assignments/A14/: primGen.hpp
Assignments/A14/shaders/: clean_shaders.sh
Assignments/A15/: primGen.hpp
Assignments/A15/shaders/: compile.sh
Assignments/A16/: A16.cpp
Assignments/A16/shaders/: clean_shaders.sh  compile.sh
SandroRun/: Audio.hpp  BuildModels.hpp  CMakeLists.txt  CameraHandle.hpp  Car.hpp  HandleCommands.hpp  Parameters.hpp  Project checklist.odt  README.md  SandroRun.cpp  Starter.hpp  TextMaker.hpp  Vehicles.hpp  main.cpp
SandroRun/headers/: Road.hpp
SandroRun/models/: car.blend  colorObj.py  guardrail.blend  streetlight.blend  tree1.blend  tree2.blend  truck.blend
SandroRun/models/cars/: car2.blend  car3.blend  cars.blend
SandroRun/models/moto/: colorObj.py
SandroRun/shaders/: Car.frag  Car.vert  HUD.frag  HUD.vert  Landscape.frag  Mesh.frag  Mesh.vert  Moto.frag  Overlay.frag  Overlay.vert  Skybox.frag  Skybox.vert  Street.frag  Street.vert  Text.frag  VColor.frag  VColor.vert
models/: colorObj.py  guardrail.blend  streetlight.blend
shaders/: Landscape.frag  Mesh.frag  Overlay.frag  Overlay.vert  Skybox.vert  Text.frag  Text.vert
